# puffit

./: .bumpversion.cfg  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  cliff.toml  makefile  pyproject.toml  sonar-project.properties  test.py
.github/workflows/: coverage.yml  lint_and_format.yml  publish.yml  python-publish.yml  security.yml  test_310.yml  test_311.yml  test_312.yml  test_39.yml  tests.yml  todoissues.yml  version.yml
docs/: processes.md
src/pft/: __main__.py
src/pft/generator/: __init__.py
src/pft/parser/: __init__.py
src/puffit/: __main__.py
src/puffit/generator/: __init__.py
src/puffit/parser/: __init__.py
templates/: go.pft  go2.pft  gobbler.pft  java.pft  java_enterprise_monolith.pft  java_maven.pft  java_spring_boot.pft  javascript.pft  nodejs.pft  nodejs_express_api.pft  python.pft  python_django.pft  python_flask.pft  python_ml.pft  react.pft  ruby.pft  ruby_sinatra.pft
tests/: test_generator.py  test_parser.py
