[tool.poetry]
name = "puffit"
version = "0.1.0"
description = "pft generates directory structure from text templates"
authors = ["Bryce Jenkins <bryce@durish.xyz>"]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = ">=3.9,<=3.12"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"
mypy = "^1.11.2"
flake8 = "^7.1.1"
build = "^1.2.2"
twine = "^5.1.1"
bump2version = "^1.0.1"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
coverage-badge = "^1.1.2"
markdown-code-blocks = "^3.1.0"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "--cov=project --cov-report=term-missing --cov-report=xml --strict-markers"
testpaths = ["tests"]
pythonpath = ["src"]
minversion = "6.0"

[tool.poetry.scripts]
test = "pytest"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
